--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 tipos-variaveis/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
 exercício-nota/.vscode/settings.json
+exercício-maior-média/.vscode/settings.json
