--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ tipos-variaveis/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
 exercício-nota/.vscode/settings.json
 exercício-maior-média/.vscode/settings.json
+exercício-par-ímpar/.vscode/settings.json
