exercício tabuada java

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ sistema-smart-tv/.vscode/settings.json
 exercício-nota/.vscode/settings.json
 exercício-maior-média/.vscode/settings.json
 exercício-par-ímpar/.vscode/settings.json
+exercício-tabuada/.vscode/settings.json
