exercício fatorial java

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ exercício-nota/.vscode/settings.json
 exercício-maior-média/.vscode/settings.json
 exercício-par-ímpar/.vscode/settings.json
 exercício-tabuada/.vscode/settings.json
+exercício-fatorial/.vscode/settings.json
