--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ exercício-maior-média/.vscode/settings.json
 exercício-par-ímpar/.vscode/settings.json
 exercício-tabuada/.vscode/settings.json
 exercício-fatorial/.vscode/settings.json
+desafio-fabrica-carros/.vscode/settings.json
