desafio soma h com ntermos java

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ exercício-par-ímpar/.vscode/settings.json
 exercício-tabuada/.vscode/settings.json
 exercício-fatorial/.vscode/settings.json
 desafio-fabrica-carros/.vscode/settings.json
+desafio-soma-h-n-termos/.vscode/settings.json
