Exercicio Dragão java

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ exercício-tabuada/.vscode/settings.json
 exercício-fatorial/.vscode/settings.json
 desafio-fabrica-carros/.vscode/settings.json
 desafio-soma-h-n-termos/.vscode/settings.json
+
+desafio-dragao/.vscode/settings.json
