desafio sequencia fibonacci

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ desafio-fabrica-carros/.vscode/settings.json
 desafio-soma-h-n-termos/.vscode/settings.json
 
 desafio-dragao/.vscode/settings.json
+desafio-positivos-media/.vscode/settings.json
+desafio-sequencia-fibonacci/.vscode/settings.json
