desafio caluclo tanque carro POO java

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ desafio-soma-h-n-termos/.vscode/settings.json
 desafio-dragao/.vscode/settings.json
 desafio-positivos-media/.vscode/settings.json
 desafio-sequencia-fibonacci/.vscode/settings.json
+desafio-carro-poo/.vscode/settings.json
