--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ desafio-dragao/.vscode/settings.json
 desafio-positivos-media/.vscode/settings.json
 desafio-sequencia-fibonacci/.vscode/settings.json
 desafio-carro-poo/.vscode/settings.json
+desafio-upcast-downcast-java/.vscode/settings.json
