desafio palindromo java

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ desafio-positivos-media/.vscode/settings.json
 desafio-sequencia-fibonacci/.vscode/settings.json
 desafio-carro-poo/.vscode/settings.json
 desafio-upcast-downcast-java/.vscode/settings.json
+desafio-numero-palindromo-java/.vscode/settings.json
