--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ desafio-sequencia-fibonacci/.vscode/settings.json
 desafio-carro-poo/.vscode/settings.json
 desafio-upcast-downcast-java/.vscode/settings.json
 desafio-numero-palindromo-java/.vscode/settings.json
+desafio-escada-java/.vscode/settings.json
